# basics

./: .appveyor.yml  .build_conf  .clang-format  .clang_complete  .codecov.yml  .editorconfig  .gitignore  .gitlab-ci.yml  .gitmodules  .travis.yml  CMakeLists.txt  LICENSE.md  Makefile  README.rst  build  compiler-warnings.cmake  conanfile.py  concurrent.hpp  current-build-dir  format  gcc-warnings.cmake  include_files.cmake  meta.hpp  othread.hpp  outil.hpp  src_files.cmake  structures.hpp  util.hpp
.build_scripts/: build  build_lib  configure  install_3rd_party  install_cmake  system_info  test  var_info
.conan/: build.py
.conan/test_package/: CMakeLists.txt  conanfile.py  test_package.cpp
.github/workflows/: clang-analyze.yml  clang-format.yml  cmake.yml  code-coverage.yml  flawfinder.yml  linux.yml  windows.yml
.old-ci/: .appveyor.yml  .travis.yml
.travis/: build
.unfinished/tests/: meta_if_all_any.cpp
CMakeLib/: README.rst  compiler-warnings.cmake  obi_fm_util.cmake  obi_in_compiler_warnings.cmake  obi_util.cmake
Examples/: CMakeLists.txt  concurrency.cpp  container_helper.cpp  function_cache  function_cache.cpp  functional  functional.cpp  if.cpp  load_library.cpp  meta.cpp  multi_array.cpp  scope_guard.cpp  scoped_timer  scoped_timer.cpp  show.cpp  static_lambda.cpp  type_to_string  type_to_string.cpp  vector.cpp
cmake/: README.rst  ext_cmake_compiler_specific.cmake  ext_cmake_compiler_warnings.cmake  ext_cmake_install.cmake  ext_cmake_setup.cmake  ext_cmake_utils.cmake  obi_cmake_compiler_warnings.cmake  obi_cmake_utils.cmake  obi_fm_util.cmake  obi_in_compiler_warnings.cmake  script_git_version.cmake
concurrent/: hierarchical_mutex.hpp
examples/: CMakeLists.txt  any_printable.cpp  any_printable_main.cpp  any_printable_use_impl.cpp  binary_index_tree.cpp  compile_check.cpp  container_helper.cpp  function_cache.cpp  functional.cpp  if.cpp  if_all_any.cpp  if_all_none.cpp  load_library.cpp  logging.cpp  meta.cpp  multi_array.cpp  scope_guard.cpp  scoped_timer.cpp  serialize.cpp  show.cpp  static_lambda.cpp  tagged_pointer.cpp  tuple.cpp  type_to_string.cpp  vector.cpp
external_libs/: init_libs  init_libs.py  libs.json
include/ext/: config.hpp  logging.hpp  std.hpp
include/ext/algorithm/: basic.hpp  knapsack.hpp  longest_common_subsequence.hpp  string_distances.hpp
include/ext/concurrent/: hierarchical_mutex.hpp  threadsafe_queue.hpp  threadsafe_stack.hpp
include/ext/logging/: definitions.hpp  functionality.hpp
include/ext/macros/: advanced.hpp  assert.hpp  compiler.hpp  general.hpp  platform.hpp
include/ext/math/: basic_functions.hpp  math_types.hpp  primes.hpp
include/ext/memory/: align.hpp  tagged_pointer.hpp
include/ext/meta/: basic.hpp  basic_old.hpp  concepts.hpp  has_member.hpp  if.hpp  if_all_any.hpp  is_one_of.hpp  pack.hpp  static_lambda.hpp  tuple.hpp  type_compare.hpp  void_t.hpp
include/ext/structures/: binary_index_tree.hpp  lru_cache.hpp  multi_array.hpp  simple2darray.hpp  trie.hpp  vector.hpp
include/ext/util/: access_private.hpp  any_printable.hpp  basic.hpp  benchmark.h  bit_tricks.hpp  cast.hpp  container_helper.hpp  container_tags.hpp  container_traits.hpp  defer.hpp  encode.hpp  endian.hpp  enum.hpp  enum_operations.hpp  except.hpp  expected-lite.hpp  expected.hpp  files.hpp  flag_set.hpp  forward_std_string.hpp  function_cache.hpp  functional.hpp  hex.hpp  io.hpp  lazy.hpp  load_library.hpp  lru_cache.hpp  memstream.hpp  pretty.hpp  regex.hpp  result.hpp  scope_guard.hpp  scoped_timer.hpp  serialization.hpp  show.hpp  stat.hpp  string.hpp  template_string_literal.hpp  term.hpp  to_str_eam.hpp  (+4 more)
include/obi/: algorithm.hpp  concurrent.hpp  config.hpp  logging.hpp  macros.hpp  math.hpp  meta.hpp  std.hpp  structures.hpp  util.hpp
include/obi/algorithm/: basic.hpp  string_distances.hpp
include/obi/concurrent/: hierarchical_mutex.hpp  threadsafe_queue.hpp  threadsafe_stack.hpp
include/obi/logging/: definitions.hpp  functionality.hpp
include/obi/macros/: advanced.hpp  assert.hpp  compiler.hpp  general.hpp  platform.hpp
include/obi/math/: basic_functions.hpp  primes.hpp
include/obi/memory/: align.hpp  tagged_pointer.hpp
include/obi/meta/: has_member.hpp  if.hpp  if_all_any.hpp  if_all_none.hpp  is_one_of.hpp  pack.hpp  static_lambda.hpp  tuple.hpp  void_t.hpp
include/obi/structures/: binary_index_tree.hpp  multi_array.hpp  simple2darray.hpp  vector.hpp
meta/: has_member.hpp  is_one_of.hpp  static_lambda.hpp  void_t.hpp
src/: logging.cpp  math.cpp
structures/: multi_array.hpp
support/: check_source  clang-format-all  clang-format-all.py  clang-format-check  clang-format-check.py  clang-format-patch  coverage  git_amend_github_master  run-test  test_conan
support/bash/: clang-format-all  find-clang-format
support/helper_scripts/: clang-format-diff
support/python_modules/: .gitignore  obi
support/travis/: flake8  install-amd64  install-amd64-osx
tests/: CMakeLists.txt  README.rst  algorithm_basic.cpp  algorithm_knapsack.cpp  algorithm_longest_common_subsequence.cpp  algorithm_string_distances.cpp  gtest.cpp  logging.cpp  math.cpp  math_simple_shapes.cpp  meta_has_member.cpp  meta_if.cpp  meta_if_all_any.cpp  meta_is_one_of.cpp  structures_binary_index_tree.cpp  structures_lru_cache.cpp  structures_trie.cpp  test_ascii_string_helper.cpp  test_cast.cpp  test_math.cpp  test_string_distances.cpp  test_util_result.cpp  util_any_printable.cpp  util_ascii_string_helper.cpp  util_basic.cpp  util_cast.cpp  util_defer.cpp  util_defer_may_throw.cpp  util_encode.cpp  util_endian.cpp  util_endian_serialization.cpp  util_enum.cpp  util_enum_operations.cpp  util_except.cpp  util_flag_set.cpp  util_hex.cpp  util_lazy.cpp  util_lru_cache.cpp  util_memstream.cpp  util_result.cpp  (+7 more)
tests/expected/: assignment.cpp  bases.cpp  constructors.cpp  emplace.cpp  expected.hpp  extensions.cpp  issues.cpp  observers.cpp  standalone_test_swap.cpp  swap.cpp
util/: function_cache.hpp  functional.hpp  load_library.hpp  scoped_timer.hpp  tracking_class.hpp  type_to_string.hpp  windows_strings.hpp
(+80 files in other folders)
